--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: CI/CD
 
 on:
   workflow_dispatch:  # Запуск кнопкой "Run workflow"
+  push:               # Запуск при коммите
 
 
 jobs:
@@ -13,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Установка необходимых зависимостей
-        run: sudo apt update && sudo apt install -y cmake g++ doxygen
+        run: sudo apt update && sudo apt install -y cmake g++
 
       - name: Создание файлов сборки
         run: cmake .
