--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Установка необходимых зависимостей
-        run: sudo apt update && sudo apt install -y cmake g++
+        run: sudo apt update && sudo apt install -y cmake g++ doxygen
 
       - name: Создание файлов сборки
         run: cmake .
